--- a/modulo3/introduçãohtml&css/index.html
+++ b/modulo3/introduçãohtml&css/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Maria Fernanda dos Santos Dias</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Maria Fernanda dos Santos Dias</h1>
+    </header>
+    <section>
+        <header>
+            <h2>Postes</h2>
+        </header>
+        <article>
+           <header>
+            <h3> Port #1</h3>
+           </header> 
+        </article>
+    </section>
+    <footer> </footer>
 </body>
 </html>
