--- a/modulo3/introduçãohtml&css/index.html
+++ b/modulo3/introduçãohtml&css/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <img src="./WhatsApp Image 2021-10-30 at 02.58.18.jpeg" alt="Ilustração do rosto de Maria Fernanda dos Santos">
         <h1>Maria Fernanda dos Santos Dias</h1>
     </header>
     <section>
@@ -17,8 +18,24 @@
            <header>
             <h3> Port #1</h3>
            </header> 
+           <p>
+            Sou maria Fernanda 
+           </p>
         </article>
     </section>
-    <footer> </footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="milto:mariadosantodias@gmail.com" target="_blank">mariadosantodias@gmail.com</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/fernanda-dias-4369b81a0/" target="_blank">Linkedin</a>
+            </li>
+            <li>
+                <a href="https://github.com/mfernandadias" target="_black">Github</a>
+            </li>
+        </ul>
+    </footer>
+    
 </body>
 </html>
