--- a/modulo3/introduçãohtml&css/index.html
+++ b/modulo3/introduçãohtml&css/index.html
@@ -8,7 +8,7 @@
  </head>
 <body>
     <header>
-        <img src="./WhatsApp Image 2021-10-30 at 02.58.18.jpeg" alt="Ilustração do rosto de Maria Fernanda dos Santos">
+        <img src="./WhatsApp Image 2021-10-30 at 02.58.18.jpeg" alt="Ilustração do rosto de Maria Fernanda dos Santos" class="maria">
         <h1 id="title">Maria Fernanda dos Santos Dias</h1>
     </header>
     <section>
@@ -19,7 +19,7 @@
            <header>
             <h3 class="post_title"> Port #1</h3>
            </header> 
-           <p>
+           <p class="post_content">
             Sou maria Fernanda 
            </p>
         </article>
