--- a/modulo3/introduçãohtml&css/index.html
+++ b/modulo3/introduçãohtml&css/index.html
@@ -25,7 +25,7 @@
         </article>
     </section>
     <footer>
-        <ul>
+        <ul class="contacts_list">
             <li>
                 <a href="milto:mariadosantodias@gmail.com" target="_blank">mariadosantodias@gmail.com</a>
             </li>
