--- a/modulo3/Javascriptintrodução/index.html
+++ b/modulo3/Javascriptintrodução/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <h1>Meu primeiro script</h1>
-    <script>
-        alert("Tudo certo jovem");
+
+
+    <!--externar script-->
+    <!--carregar o script ao final do body -->
+    <script src="./script.js">   
     </script>
     
 </body>
