--- a/modulo3/3estrutura báscia do display flex/5justify-content.html
+++ b/modulo3/3estrutura báscia do display flex/5justify-content.html
@@ -10,7 +10,7 @@
             border: 1px solid black;
             margin: 0; 
             display: flex;
-            margin-bottom: 
+            margin-bottom: white;
         }
         .item{
             background-color: blueviolet;
