--- a/modulo3/3estrutura báscia do display flex/10flex-shrink.html
+++ b/modulo3/3estrutura báscia do display flex/10flex-shrink.html
@@ -17,10 +17,37 @@
         text-align: center;
         margin: 5px;
     }
+    .s-1{
+        flex-shrink: 1;
+    }
+    .fg-1{
+        flex-grow: 1;
+    }
 </style>
 <body>
     <div class="flex-container">
-        
+        <div class="item">A</div>
+        <div class="item">B</div>
+        <div class="item">C</div>
+        <div class="item">D</div>
+        <div class="item">E</div>
+    </div>
+
+    <div class="flex-container">
+        <div class="item">A</div>
+        <div class="item">The generated</div>
+        <div class="item">C</div>
+        <div class="item">D</div>
+        <div class="item">E</div>
+    </div>
+
+    <p>flex-shrink: 0 / basis: 100px</p>
+    <div class="flex-container">
+        <div class="item">A</div>
+        <div class="item">The generated</div>
+        <div class="item">C</div>
+        <div class="item">D</div>
+        <div class="item">E</div>
     </div>
     
 </body>
