--- a/modulo3 - dominando JavaScript/projeto/index.html
+++ b/modulo3 - dominando JavaScript/projeto/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Contador</title>
-    <link rel="stylesheet" href="./assets/style.css"/>
+    <link rel="stylesheet" href="assets/styles.css" />
+    <title>Contador</title>
 </head>
 <body>
-    <h1>Contador</h1>
-    <p>clique nos botões para alterar o valor </p>
-    
-
-    <script src="./js/scripts.js" ></script>
+    <h1>Olá, mundo!</h1>
+    <p>Este é o meu primeiro projeto Javascript.</p>
+    <div id="counter">
+        <button name="subtrair" onclick="decrement()">-</button>
+        <span id="currentNumber">0</span>
+        <button name="adicionar" onclick="increment()">+</button>
+    </div>
+    <script src="assets/scripts.js"></script>
 </body>
 </html>
